--- a/view/home/index_index.html
+++ b/view/home/index_index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<title>React</title>
+  <meta charset="UTF-8">
+  <title>React</title>
+  <link rel="stylesheet" href="/static/home.css">
 </head>
+
 <body>
-  <div id="react-dom"></div>
+<div id="react-dom"><%- html %></div>
 </body>
 <script>
   window.csrfToken = '<%= __CSRF__ %>'
-  
 </script>
-<script src="/static/output/<%= page %>.bundle.js"></script>
+<script src="/static/home.bundle.js"></script>
 </html>
