--- a/www/client/admin/login/index.scss
+++ b/www/client/admin/login/index.scss
@@ -17,6 +17,7 @@ $module-width: 320px;
   height: 100%;
   background: #e9e9e9;
   color: $gray;
+  margin: 0;
   font-size: 14px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
