--- a/www/client/home/components/navigator/index.scss
+++ b/www/client/home/components/navigator/index.scss
@@ -6,3 +6,50 @@
   z-index: 1000;
   border-bottom: 1px solid #000;
 }
+
+._global {
+  .rc-tooltip-inner {
+    padding: 4px 6px;
+    min-height: 20px;
+    font-size: 14px;
+  }
+}
+
+._namespace {
+  width: 45px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  background: #2a2a2a;
+
+  .dropdown {
+    position: relative;
+
+    a {
+      display: block;
+      width: 45px;
+      height: 45px;
+      text-align: center;
+      line-height: 45px;
+      text-decoration: none;
+      font-size: 18px;
+      color: #999999;
+      text-shadow: 0 1px 0 black;
+    }
+
+    a.active {
+      background-color: #e78170;
+      color: white;
+      text-shadow: 0 1px 0 #de533a;
+    }
+
+    a:hover {
+      background-color: #f49484;
+      color: white;
+      text-shadow: 0 1px 0 #de533a;
+    }
+  }
+
+}
