--- a/www/client/home/components/navigator/index.scss
+++ b/www/client/home/components/navigator/index.scss
@@ -52,4 +52,21 @@
     }
   }
 
+  .users {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 45px;
+    height: 200px;
+    display: flex;
+    padding: 10px 0 20px 0;
+    flex-direction: column-reverse;
+
+    .signin {
+      display: block;
+      width: 45px;
+      text-align: center;
+      font-size: 18px;
+    }
+  }
 }
