修改同构方案,更佳体验

--- a/view/home/index_index.html
+++ b/view/home/index_index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<div id="react-dom"></div>
+<div id="react-dom">{html}</div>
 </body>
 <script>
   window.csrfToken = '<%= __CSRF__ %>'
