--- a/www/client/home/components/navigator/index.scss
+++ b/www/client/home/components/navigator/index.scss
@@ -50,6 +50,14 @@
       color: white;
       text-shadow: 0 1px 0 #de533a;
     }
+
+    i {
+      color: inherit;
+
+      &:hover {
+        color: inherit;
+      }
+    }
   }
 
   .users {
