--- a/www/client/home/components/usermenu/index.scss
+++ b/www/client/home/components/usermenu/index.scss
@@ -4,6 +4,51 @@
   right: 0;
   margin-bottom: 0;
   z-index: 1010;
+
+  .login-form {
+    position: relative;
+  }
+
+  .user {
+    position: relative;
+    width: 48px;
+    height: 38px;
+    display: inline-block;
+    padding-right: 10px;
+    margin-right: 10px;
+    border: none;
+
+    img {
+      width: 100%;
+      height: 100%;
+      border: 2px solid white;
+      border-radius: 50%;
+      box-sizing: border-box;
+
+      &:hover {
+        border-color: #e78170;
+      }
+    }
+  }
+
+  .caret {
+    position: absolute;
+    top: 20px;
+    right: 0;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    vertical-align: top;
+    border-top: 4px solid black;
+    border-right: 4px solid transparent;
+    border-left: 4px solid transparent;
+    content: "";
+  }
+
+  .dropdown-menu {
+    right: 2px;
+    left: auto;
+  }
 }
 
 .login {
